--- a/public/index.html
+++ b/public/index.html
@@ -46,13 +46,13 @@
 .txtarea {
   display: inline-block;
     color: #676767;
-    width: 617px;
+    width: 80%;
     margin-bottom: 10px;
     border: 1px solid #CCC;
     padding: 5px 9px;
     font-size: 15px!important;
     line-height: 1.4em;
-    height: 100%;
+    height: 80%;
 }
 .txtarea:focus {
    border-style:solid;
@@ -114,10 +114,19 @@ input.error:focus, textarea.error:focus {
           "Content-Type": "application/json",
         },
       })
-        .then((response) => response.blob())
+        .then((response) =>{
+          if(response.ok){
+            return response.blob();
+          }
+        return Promise.reject(`Ошибка: ${response.status}`);
+        } )
         .then((result) => {
           audioBlock.src = URL.createObjectURL(result);
           audioBlock.play();
+        })
+        .catch((error)=>{
+          textBlock.value='ПРоизошла ошибка запроса!'
+          console.log(error);
         });
     });
   </script>
