--- a/public/index.html
+++ b/public/index.html
@@ -1,133 +1,93 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
-    <style>
-      body {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-family: sans-serif;
-      }
 
-      button {
-        background: transparent;
-        width: 100px;
-        height: 50px;
-        font-size: medium;
-        border-radius: 4px;
-        margin-bottom: 50px;
-      }
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <title>Document</title>
+  <style>
+    .player {
+      margin-top: 15px;
+      width: 100%;
+    }
 
-      section {
-        width: 400px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-      }
+    .hide {
+      display: none;
+    }
 
-      audio {
-        display: none;
-      }
-      /*
-Форма обратной связи
-*/
-#inline {
-   margin-left:30px;
-   margin:0 auto;
-   background:#FFF;
-   padding:10px 20px;
-   height: 300px;
-}
-.txtarea {
-  display: inline-block;
-    color: #676767;
-    width: 80%;
-    margin-bottom: 10px;
-    border: 1px solid #CCC;
-    padding: 5px 9px;
-    font-size: 15px!important;
-    line-height: 1.4em;
-    height: 80%;
-}
-.txtarea:focus {
-   border-style:solid;
-   border-color:#BABABA;
-   color:#444;
-}
-input.error, textarea.error {
-    border-color:#973D3D;
-    border-style:solid;
-    background:#F0BEBE;
-    color:#A35959;
-}
-input.error:focus, textarea.error:focus {
-    border-color:#973D3D;
-    color:#A35959;
-}
-#stop {
-    color:#FFFFFF;
-    display:block;
-    cursor:pointer;
-    padding:5px 11px;
-    font-size:1.2em;
-    border:solid 1px #F9F9F9;
-    border-radius:2px;
-    background:#70C6B9;
-    width:210px;
-    margin-bottom:20px;
-}
-#send:hover {
-    background:#979797;
-}
-/*
-Форма обратной связи
-*/
-    </style>
-  </head>
-  <body>
-    <div id="inline">
-      <audio id="audio" controls></audio>
-      <h2>Введите текст частушки!</h2>
-      <textarea id="msg" class="txtarea" name="msg" placeholder="Ваша частушка:"></textarea>
-      <button id="stop">Слушать</button>
-      </div>
-  </body>
+    .send {
+      margin-top: 15px;
+    }
 
-  <script>
-    let listenButton = document.getElementById("stop");
-    let textBlock = document.getElementById("msg");
-    let audioBlock = document.getElementById("audio");
+    .container {
+      max-width: 450px;
+      width: 95%;
+      margin: auto;
+      box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
+      border-radius: 25px;
+      padding: 30px;
+    }
 
-    listenButton.addEventListener("click", () => {
-      fetch("/api/speech", {
-        method: "post",
-        body: JSON.stringify({
-          text: textBlock.value,
-        }),
-        headers: {
-          Accept: "application/json",
-          "Content-Type": "application/json",
-        },
-      })
-        .then((response) =>{
-          if(response.ok){
-            return response.blob();
-          }
+    .txtarea {
+      font-size: 1.5rem;
+    }
+  </style>
+</head>
+
+<body>
+  <div class="container form-group shadow-textarea">
+    <h2 class="h1">Введите текст частушки!</h2>
+    <textarea class="txtarea form-control" rows="8" name="msg" placeholder="Ваша частушка:"></textarea>
+    <button type="button" class="btn btn-primary btn-lg btn-block send">Отправить</button>
+    <audio class="player hide" controls></audio>
+  </div>
+</body>
+
+<script>
+  let listenButton = document.querySelector(".send");
+  let textBlock = document.querySelector(".txtarea");
+  let audioBlock = document.querySelector(".player");
+  listenButton.addEventListener("click", () => {
+    audioBlock.classList.add('hide');
+    listenButton.classList.remove('btn-primary');
+    listenButton.classList.add('btn-danger');
+    listenButton.textContent = 'Загрузка';
+    fetch("/api/speech", {
+      method: "post",
+      body: JSON.stringify({
+        text: textBlock.value,
+      }),
+      headers: {
+        Accept: "application/json",
+        "Content-Type": "application/json",
+      },
+    })
+      .then((response) => {
+        if (response.ok) {
+          return response.blob();
+        }
         return Promise.reject(`Ошибка: ${response.status}`);
-        } )
-        .then((result) => {
-          audioBlock.src = URL.createObjectURL(result);
-          audioBlock.play();
-        })
-        .catch((error)=>{
-          textBlock.value='ПРоизошла ошибка запроса!'
-          console.log(error);
-        });
-    });
-  </script>
+      })
+      .then((result) => {
+        audioBlock.classList.remove('hide');
+        listenButton.classList.add('btn-primary');
+        listenButton.classList.remove('btn-danger');
+        listenButton.textContent = 'Отправить';
+        audioBlock.src = URL.createObjectURL(result);
+        audioBlock.play();
+      })
+      .catch((error) => {
+
+        textBlock.value = 'Произошла ошибка запроса!'
+        listenButton.classList.add('btn-primary');
+        listenButton.classList.remove('btn-danger');
+        listenButton.textContent = 'Отправить';
+        console.log(error);
+      });
+  });
+</script>
+
 </html>
