--- a/public/index.html
+++ b/public/index.html
@@ -1,92 +1,1 @@
-<!DOCTYPE html>
-<html lang="ru">
-
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-  <title>Document</title>
-  <style>
-    .player {
-      margin-top: 15px;
-      width: 100%;
-    }
-
-    .hide {
-      display: none;
-    }
-
-    .send {
-      margin-top: 15px;
-    }
-
-    .container {
-      max-width: 450px;
-      width: 95%;
-      margin: auto;
-      box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
-      border-radius: 25px;
-      padding: 30px;
-    }
-
-    .txtarea {
-      font-size: 1.5rem;
-    }
-  </style>
-</head>
-
-<body>
-  <div class="container form-group shadow-textarea">
-    <h2 class="h1">Введите текст частушки!</h2>
-    <textarea class="txtarea form-control" rows="8" name="msg" placeholder="Ваша частушка:"></textarea>
-    <button type="button" class="btn btn-primary btn-lg btn-block send">Отправить</button>
-    <audio class="player hide" controls></audio>
-  </div>
-</body>
-
-<script>
-  let listenButton = document.querySelector(".send");
-  let textBlock = document.querySelector(".txtarea");
-  let audioBlock = document.querySelector(".player");
-  listenButton.addEventListener("click", () => {
-    audioBlock.classList.add('hide');
-    listenButton.classList.remove('btn-primary');
-    listenButton.classList.add('btn-danger');
-    listenButton.textContent = 'Загрузка';
-    fetch("/api/speech", {
-      method: "post",
-      body: JSON.stringify({
-        text: textBlock.value,
-      }),
-      headers: {
-        Accept: "application/json",
-        "Content-Type": "application/json",
-      },
-    })
-      .then((response) => {
-        if (response.ok) {
-          return response.blob();
-        }
-        return Promise.reject(`Ошибка: ${response.status}`);
-      })
-      .then((result) => {
-        audioBlock.classList.remove('hide');
-        listenButton.classList.add('btn-primary');
-        listenButton.classList.remove('btn-danger');
-        listenButton.textContent = 'Отправить';
-        audioBlock.src = URL.createObjectURL(result);
-        audioBlock.play();
-      })
-      .catch((error) => {
-
-        textBlock.value = 'Произошла ошибка запроса!'
-        listenButton.classList.add('btn-primary');
-        listenButton.classList.remove('btn-danger');
-        listenButton.textContent = 'Отправить';
-        console.log(error);
-      });
-  });
-</script>
-</html>
+<!doctype html><html lang="ru"><head><meta charset="UTF-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="keywords" content="частушки, генератор частушек, частушки онлайн"><meta name="description" content="Генератор частушек с использованием Yandex.SpeechKit"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png"><link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"><link rel="icon" href="/favicon.svg" type="image/svg+xml"><link rel="manifest" href="/site.webmanifest"><link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"><meta name="msapplication-TileColor" content="#da532c"><meta name="theme-color" content="#ffffff"><meta http-equiv="X-UA-Compatible" content="ie=edge"/><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous"><title>Частушки онлайн</title><link rel="stylesheet" href="style.83ba29d99699485ddff1.css"></head><body><div class="bg-light container form-group shadow-textarea"><h1 class="h3 font-weight-bold text-center text-dark">Генератор<br>частушек</h1><div><div class="row"><div class="col-md-6"><label class="my-1 mr-2">Текст частушки</label> <textarea class="form-control txtarea" rows="8" name="msg" placeholder="Введите текст частушки!Для ударения используйте «+». Для паузы «-»."></textarea></div><div class="col-md-6"><label class="my-1 mr-2">Голос</label> <select class="custom-select my-1 mr-sm-2" id="voice"><option selected="selected" value="alyss">Элис</option><option value="jane">Джейн</option><option value="oksana">Оксана</option><option value="zahar">Захар</option><option value="alena">Алена</option><option value="filipp">Филипп</option></select> <label class="my-1 mr-2">Эмоция</label> <select class="custom-select my-1 mr-sm-2" id="emotion"><option value="neutral">Нейтральная</option><option value="evil">Раздраженная</option><option selected="selected" value="good">Радостная</option></select> <label class="my-1 mr-2">Скорость</label> <select class="custom-select my-1 mr-sm-2" id="speed"><option selected="selected" value="1">1</option><option value="1.2">1.2</option><option value="1.4">1.4</option><option value="1.6">1.6</option><option value="1.8">1.8</option><option value="2">2</option><option value="2.2">2.2</option><option value="2.4">2.4</option><option value="2.6">2.6</option></select></div></div></div><button type="button" class="btn btn-primary btn-lg btn-block send">Сгенерировать</button> <a class="download link" href="#" download="Частушка.wav"><button class="download-btn hide btn btn-warning btn-block">Скачать</button></a><audio class="player hide" controls></audio><div class="parent"><a class="github-button" href="https://github.com/t0nyhat/chastushki_js.git" style="display: inline-block; box-sizing: border-box; text-align: center; margin: 0 auto;  text-decoration: none;" data-color-scheme="no-preference: light; light: light; dark: light;" data-size="large" aria-label="Check on GitHub">Исходный код на Github</a></div></div></body><script src="main.bbc27881e01c47162b15.js"></script><script async defer="defer" src="https://buttons.github.io/buttons.js"></script></html>
